Fixed addons sidebar being 1px too big when compared to preferences

--- a/Profile Folder/chrome/styles/partials/content/firefox/pages/chrome-11/global/_sidebar.scss
+++ b/Profile Folder/chrome/styles/partials/content/firefox/pages/chrome-11/global/_sidebar.scss
@@ -75,6 +75,7 @@ body {
 .navigation,
 #sidebar:not(moz-checkbox) {
 	border-inline-end: 1px solid var(--sidebar-border-inline-end-color);
+	box-sizing: border-box;
 	width: var(--sidebar-width) !important;
 	background: var(--sidebar-gradients);
 
